--- a/ri-report.html
+++ b/ri-report.html
@@ -3624,10 +3624,27 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
      color: colors[i]
    }));
    
-   // Build DOM data for fastest cities (simpler - just use current avg)
+   // Build yearly DOM data for fastest cities
+   const yearlyDomData = {};
+   fastestCities.forEach(c => {
+     yearlyDomData[c.city] = {};
+     years.forEach(y => yearlyDomData[c.city][y] = []);
+   });
+   
+   rawData.properties.filter(p => p.soldDate && p.dom > 0 && p.dom < 365).forEach(p => {
+     const year = parseInt(p.soldDate.split('-').pop());
+     if (yearlyDomData[p.city] && yearlyDomData[p.city][year]) {
+       yearlyDomData[p.city][year].push(p.dom);
+     }
+   });
+   
    const domDatasets = fastestCities.map((c, i) => ({
      label: c.city,
-     data: [null, null, null, null, c.avgDom], // Only current data available
+     data: years.map(y => {
+       const doms = yearlyDomData[c.city][y];
+       if (doms.length === 0) return null;
+       return Math.round(doms.reduce((a,b) => a+b, 0) / doms.length);
+     }),
      color: colors[i]
    }));
    
