Fix land deal emojis - show all profit levels
- 🔥 Hot: >30% profit margin
- 👍 Good: >20% profit margin
- 📊 Fair: >10% profit margin
- 📉 Low: >0% (was showing '—')
- ⚠️ Loss: negative margin (was showing '—')

--- a/ri-report.html
+++ b/ri-report.html
@@ -1968,7 +1968,7 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
  profit: Math.round(profit),
  profitPct: profitPct.toFixed(1),
  maxOffer: Math.round(Math.max(0, maxOffer)),
- dealScore: profitPct > 30 ? '🔥 Hot' : profitPct > 20 ? '👍 Good' : profitPct > 10 ? '📊 Fair' : '—'
+ dealScore: profitPct > 30 ? '🔥 Hot' : profitPct > 20 ? '👍 Good' : profitPct > 10 ? '📊 Fair' : profitPct > 0 ? '📉 Low' : '⚠️ Loss'
  };
  });
  
