--- a/ri-results.html
+++ b/ri-results.html
@@ -256,7 +256,7 @@
             all: () => 'All Properties'
         };
         
-        const fmt = v => v >= 1000000 ? '$' + (v/1000000).toFixed(1) + 'M' : '$' + Math.round(v/1000) + 'K';
+        const fmt = v => { const abs = Math.abs(v), s = v < 0 ? '-' : ''; return abs >= 1000000 ? '$' + s + (abs/1000000).toFixed(1) + 'M' : '$' + s + Math.round(abs/1000) + 'K'; };
         
         async function loadData() {
             try {
