--- a/ri-results.html
+++ b/ri-results.html
@@ -102,19 +102,19 @@
     <!-- Nav Bar (matches main page) -->
     <nav style="position:fixed;top:0;left:0;right:0;background:rgba(15,23,42,0.95);backdrop-filter:blur(10px);border-bottom:1px solid rgba(255,255,255,0.08);z-index:1000;padding:0.75rem 2rem;">
         <div style="max-width:1400px;margin:0 auto;display:flex;justify-content:space-between;align-items:center;">
-            <a href="https://aibridges.org" style="display:flex;align-items:center;gap:0.5rem;text-decoration:none;">
+            <a href="ri-report.html" style="display:flex;align-items:center;gap:0.5rem;text-decoration:none;">
                 <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <rect width="32" height="32" rx="6" fill="#6366f1"/>
                     <path d="M6 22h20M9 22v-6l7-8 7 8v6M13 22v-5h6v5" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
                 </svg>
-                <span style="font-weight:700;font-size:1.1rem;color:#f8fafc">Bridges</span>
+                <span style="font-weight:700;font-size:1.1rem;color:#f8fafc">RI Real Estate</span>
             </a>
             <div style="display:flex;gap:1.5rem;align-items:center;">
-                <a href="ri-report.html#price-comp" style="color:#a1afc4;text-decoration:none;font-size:0.9rem;transition:color 0.2s;">Address Lookup</a>
+                <a href="ri-report.html" style="color:#10b981;text-decoration:none;font-size:0.9rem;font-weight:600;transition:color 0.2s;">← Back to Report</a>
                 <a href="ri-report.html#house-hunter" style="color:#a1afc4;text-decoration:none;font-size:0.9rem;transition:color 0.2s;">House Hunter</a>
                 <a href="ri-report.html#land-deals" style="color:#a1afc4;text-decoration:none;font-size:0.9rem;transition:color 0.2s;">Land Deals</a>
                 <a href="ri-report.html#sql-tool" style="color:#a1afc4;text-decoration:none;font-size:0.9rem;transition:color 0.2s;">SQL Search</a>
-                <a href="https://aibridges.org/#contact" style="background:linear-gradient(135deg,#6366f1,#4f46e5);color:white;padding:0.5rem 1rem;border-radius:8px;text-decoration:none;font-size:0.9rem;font-weight:600;">Contact</a>
+                <a href="https://aibridges.org" style="background:linear-gradient(135deg,#6366f1,#4f46e5);color:white;padding:0.5rem 1rem;border-radius:8px;text-decoration:none;font-size:0.9rem;font-weight:600;">🏠 Home</a>
             </div>
         </div>
     </nav>
@@ -124,10 +124,6 @@
             <div>
                 <h1 id="title">Loading Results...</h1>
                 <p class="subtitle" id="subtitle"></p>
-            </div>
-            <div style="display:flex;gap:1rem;">
-                <a href="ri-report.html" class="home-btn back-btn">← Back to Report</a>
-                <a href="https://aibridges.org" class="home-btn">🏠 Home</a>
             </div>
         </div>
         
