fix: View button text now white (was being overridden by table link style)

--- a/ri-results.html
+++ b/ri-results.html
@@ -51,6 +51,7 @@
         .results-table td { padding: 0.875rem 1rem; border-bottom: 1px solid rgba(255,255,255,0.05); font-size: 0.9rem; }
         .results-table tr:hover { background: rgba(99,102,241,0.1); }
         .results-table a { color: #10b981; text-decoration: none; }
+        .results-table a.view-btn { color: white; }
         
         .view-btn { display: inline-flex; align-items: center; gap: 0.3rem; background: linear-gradient(135deg, #10b981, #059669); color: white; padding: 0.4rem 0.8rem; border-radius: 8px; text-decoration: none; font-size: 0.8rem; font-weight: 600; transition: all 0.2s; }
         .view-btn:hover { transform: scale(1.05); box-shadow: 0 4px 15px rgba(16,185,129,0.4); }
