fix: neighborhood chart infinite expand + view btn color
- Added fixed height container for neighborhood price trend chart
- Fixed view button text color with !important to override link styles

--- a/ri-report.html
+++ b/ri-report.html
@@ -3216,7 +3216,7 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
  (trendLabels.length > 2 ? 
  '<div style="margin-bottom:1.5rem">' +
  '<h4 style="color:#a5b4fc;margin-bottom:0.5rem"> Neighborhood Price Trend</h4>' +
- '<canvas id="neighborhoodTrendChart" height="120"></canvas>' +
+ '<div style="height:150px;position:relative"><canvas id="neighborhoodTrendChart"></canvas></div>' +
  '</div>' : '') +
  
  '<div style="display:grid;grid-template-columns:1fr 1fr;gap:1.5rem">' +
