feat: add Python ML analysis scripts
- price_predictor.py: Gradient Boosting price prediction
- deal_scorer.py: Isolation Forest anomaly detection
- similar_finder.py: KNN-based comp finder
- market_forecast.py: Prophet time series forecasting

Plus fix chart grid alignment

--- a/ri-results.html
+++ b/ri-results.html
@@ -22,7 +22,7 @@
         .section-header::after { content: ''; flex: 1; height: 2px; background: linear-gradient(90deg, rgba(99,102,241,0.5), transparent); border-radius: 1px; }
         
         /* Charts Grid */
-        .charts-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; margin-bottom: 1.5rem; align-items: start; }
+        .charts-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; margin-bottom: 1.5rem; align-items: start; grid-auto-rows: min-content; }
         .chart-card { background: linear-gradient(135deg, rgba(255,255,255,0.03), rgba(255,255,255,0.01)); border: 1px solid rgba(255,255,255,0.08); border-radius: 12px; padding: 1rem; transition: all 0.3s; }
         .chart-card:hover { border-color: rgba(99,102,241,0.3); }
         .chart-card.full-width { grid-column: span 2; }
