Fix chart spacing - maintainAspectRatio:false + max-height

--- a/ri-report.html
+++ b/ri-report.html
@@ -40,7 +40,7 @@
  h2::after { content: ''; flex: 1; height: 2px; background: linear-gradient(90deg, rgba(99,102,241,0.5), transparent); }
  
  .chart-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; }
- .chart-card { background: rgba(255,255,255,0.03); padding: 1.5rem; border-radius: 16px; border: 1px solid rgba(255,255,255,0.08); }
+ .chart-card { background: rgba(255,255,255,0.03); padding: 1.5rem; border-radius: 16px; border: 1px solid rgba(255,255,255,0.08); max-height: 320px; }
  .chart-card.full { grid-column: span 2; }
  .chart-card.third { grid-column: span 1; }
  .chart-title { font-size: 1rem; color: #94a3b8; margin-bottom: 1rem; }
@@ -3381,7 +3381,7 @@ ${compResults.map(p => `<tr><td><a href="${p.url}" target="_blank">${p.address}<
  function initCharts() {
  try {
  const chartColors = { purple: '#6366f1', pink: '#ec4899', green: '#10b981', amber: '#f59e0b', cyan: '#06b6d4' };
- const chartOpts = { responsive: true, maintainAspectRatio: true, plugins: { legend: { labels: { color: '#94a3b8' } } }, scales: { x: { grid: { color: 'rgba(255,255,255,0.05)' }, ticks: { color: '#94a3b8' } }, y: { grid: { color: 'rgba(255,255,255,0.05)' }, ticks: { color: '#94a3b8' } } } };
+ const chartOpts = { responsive: true, maintainAspectRatio: false, plugins: { legend: { labels: { color: '#94a3b8' } } }, scales: { x: { grid: { color: 'rgba(255,255,255,0.05)' }, ticks: { color: '#94a3b8' } }, y: { grid: { color: 'rgba(255,255,255,0.05)' }, ticks: { color: '#94a3b8' } } } };
  
  // Monthly trend - compute from properties if not in summary
  const monthly = rawData.summary.monthlyTrends || (() => {
